login form overlap with footer fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,19 +30,19 @@
    background-position: 700px 0;
    background-color:#ADE9F4;
    width:80vw;
-   height:77vh;
+   height:600px;
    margin:100px auto 0 auto;
    border: 2px solid white;
    padding: 10px;
    border-radius: 10px;
    box-shadow: 2px 2px 3px white;
+
   }
  .container{
-   min-height:100vh;
+   min-height:700px;
    background-color:white;
-   padding: 80px 0;
-   position: relative;
-   
+   padding: 50px 0 0 0;
+      
    }
 
   
@@ -56,7 +56,7 @@
 }
 
 .footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 60px;
@@ -84,11 +84,11 @@
 
 
  .form-container1{
-  width: 20%;
+  width: 400px;
   position: absolute;
   left:100px;
   margin: 40px 0 0 10px;
-  height: 60%;
+  height: 500px;
   border: 1px solid lightblue;
   padding:50px;
   border-radius:10px;
